onlinemartchart/templates/frontend/ingress_frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
spec:
  tls:
    - hosts:
      - onlinemart.cntp.in
  ingressClassName: nginx
  rules:
  - host: onlinemart.cntp.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: client
           port: 
             number: 4200
